--- a/main.html
+++ b/main.html
@@ -11,17 +11,17 @@
     <script type="text/javascript" src="./script.js">
 	</script>
 
-	<marquee behavior="scroll" direction="left"><h1>Welcome to Acciojobs!</h1></marquee>
+	<marquee behavior="scroll" direction="left"><h1>Welcome to Accio Jobs!</h1></marquee>
 
     <h1><a href="https://acciojob.com/blog/">Blog</a></h1>
-    <img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" alt="" height="300">
+    <img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" alt="" height="200">
 
 
     <a href="https://acciojob.com/blog/">
-        <h1>DSA vs. Competitive Programming</h1>
-        <p>DSA or Competitive programming? What is better for you? Questions such as these often put you in a…</p>
+        <h1>Brute Force vs. Optimization</h1>
+        <p>We can say that optimization is one step further than the brute-force method of problem solving…</p>
     </a>
-    <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" alt="" height="300">
+    <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" alt="" height="200">
 
 
     <a href="https://acciojob.com/blog/">
